name:               FunGEn
version:            1.0
copyright:          (C) 2002 Andre Furtado <awbf@cin.ufpe.br>
license:            BSD3
license-file:       LICENSE
author:             Andre Furtado <awbf@cin.ufpe.br>
maintainer:         Simon Michael <simon@joyful.com>
homepage:           http://joyful.com/fungen
category:           Game
synopsis:           A lightweight, cross-platform, OpenGL/GLUT-based game engine.
description:
    FunGEn (Functional Game Engine) is a BSD-licensed, cross-platform,
    OpenGL/GLUT-based, non-FRP game engine/framework written in
    Haskell. Created by Andre Furtado in 2002, it's the oldest Haskell
    game engine, and with very few dependencies and two example games,
    it's one of the easiest ways to get started with Haskell game
    development.

    The FunGEn library provides:

    * Initialization, updating, removing, rendering and grouping
      routines for game objects

    * Definition of a game background (or map), including texture-based
      maps and tile maps

    * Reading and intepretation of the player's keyboard and mouse input

    * Collision detection

    * Time-based functions and pre-defined game actions

    * Loading and displaying of 24-bit bitmap files

    * Some debugging and game performance evaluation facilities

    This package receives only basic maintenance (see home page).

stability:          beta
cabal-version:      >= 1.8
build-type:         Simple
tested-with:        GHC==7.8.4, GHC==7.10.2
extra-source-files: 
                    README.md,
                    CHANGES
data-files:
                    examples/pong/*.bmp,
                    examples/worms/*.bmp

source-repository head
  type:     git
  location: https://github.com/haskell-game/fungen

library
  ghc-options:      -W
  exposed-modules:  
                    Graphics.UI.Fungen,
                    Graphics.UI.Fungen.Display,
                    Graphics.UI.Fungen.Game,
                    Graphics.UI.Fungen.Init,
                    Graphics.UI.Fungen.Input,
                    Graphics.UI.Fungen.Loader,
                    Graphics.UI.Fungen.Map,
                    Graphics.UI.Fungen.Objects,
                    Graphics.UI.Fungen.Text,
                    Graphics.UI.Fungen.Timer,
                    Graphics.UI.Fungen.Types,
                    Graphics.UI.Fungen.Util,
                    Graphics.UI.GLUT.Input

  build-depends:
                    base == 4.*
                   ,base-compat
                   ,OpenGL
                   ,GLUT
                   ,random

executable fungen-hello
  ghc-options: -W
  hs-source-dirs: examples
  main-is:          hello.hs
  build-depends:    FunGEn
                   ,base
                   ,OpenGL
                   ,GLUT
                   ,random

executable fungen-pong
  ghc-options: -W
  hs-source-dirs: examples
  main-is:          pong/pong.hs
  build-depends:    FunGEn == 1.0.*
                   ,base
                   ,OpenGL
                   ,GLUT
                   ,random

executable fungen-worms
  ghc-options: -W
  hs-source-dirs: examples
  main-is:          worms/worms.hs
  build-depends:    FunGEn == 1.0.*
                   ,base
                   ,OpenGL
                   ,GLUT
                   ,random
