name:           FunGEn
version:        1.1
synopsis:       A lightweight, cross-platform, OpenGL/GLUT-based game engine.
description:
    FunGEn (Functional Game Engine) is a BSD-licensed, cross-platform,
    OpenGL/GLUT-based, non-FRP game engine/framework written in
    Haskell. Created by Andre Furtado in 2002, it's the oldest Haskell
    game engine, and with very few dependencies and two example games,
    it's one of the easiest ways to get started with Haskell game
    development.

    The FunGEn library provides:

    * Initialization, updating, removing, rendering and grouping
      routines for game objects

    * Definition of a game background (or map), including texture-based
      maps and tile maps

    * Reading and intepretation of the player's keyboard and mouse input

    * Collision detection

    * Time-based functions and pre-defined game actions

    * Loading and displaying of 24-bit bitmap files

    * Some debugging and game performance evaluation facilities

    This package receives only basic maintenance (see home page).

category:       Game
stability:      beta
homepage:       https://github.com/haskell-game/fungen
bug-reports:    https://github.com/haskell-game/fungen/issues
author:         Andre Furtado <awbf@cin.ufpe.br>
maintainer:     Simon Michael <simon@joyful.com>
copyright:      (C) 2002 Andre Furtado <awbf@cin.ufpe.br>
license:        BSD3
license-file:   LICENSE
tested-with:    GHC==8.8.4, GHC==8.10.2
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md
    CHANGES.md
    TUTORIAL.md
    site/brief.gif
    site/example.html
    site/logo.gif
    site/pong.png
    site/tex.bmp
    site/worms.png

data-files:
    examples/pong/tex.bmp
    examples/worms/border1.bmp
    examples/worms/border2.bmp
    examples/worms/border3.bmp
    examples/worms/congratulations.bmp
    examples/worms/food.bmp
    examples/worms/free1.bmp
    examples/worms/free2.bmp
    examples/worms/free3.bmp
    examples/worms/gameover.bmp
    examples/worms/heade.bmp
    examples/worms/headn.bmp
    examples/worms/heads.bmp
    examples/worms/headw.bmp
    examples/worms/level1.bmp
    examples/worms/level2.bmp
    examples/worms/level3.bmp
    examples/worms/segment.bmp

source-repository head
  type: git
  location: https://github.com/haskell-game/fungen

library
  ghc-options: -W
  build-depends:
      GLUT
    , OpenGL
    , base ==4.*
    , base-compat
    , random
  exposed-modules:
      Graphics.UI.Fungen
      Graphics.UI.Fungen.Display
      Graphics.UI.Fungen.Game
      Graphics.UI.Fungen.Init
      Graphics.UI.Fungen.Input
      Graphics.UI.Fungen.Loader
      Graphics.UI.Fungen.Map
      Graphics.UI.Fungen.Objects
      Graphics.UI.Fungen.Text
      Graphics.UI.Fungen.Timer
      Graphics.UI.Fungen.Types
      Graphics.UI.Fungen.Util
      Graphics.UI.GLUT.Input
  other-modules:
      Paths_FunGEn
  default-language: Haskell2010

executable fungen-hello
  main-is: hello.hs
  hs-source-dirs:
      examples
  ghc-options: -W
  build-depends:
      FunGEn ==1.0.*
    , GLUT
    , OpenGL
    , base
    , random
  other-modules:
      Paths_FunGEn
  default-language: Haskell2010

executable fungen-pong
  main-is: pong/pong.hs
  hs-source-dirs:
      examples
  ghc-options: -W
  build-depends:
      FunGEn ==1.0.*
    , GLUT
    , OpenGL
    , base
    , random
  other-modules:
      Paths_FunGEn
  default-language: Haskell2010

executable fungen-worms
  main-is: worms/worms.hs
  hs-source-dirs:
      examples
  ghc-options: -W
  build-depends:
      FunGEn ==1.0.*
    , GLUT
    , OpenGL
    , base
    , random
  other-modules:
      Paths_FunGEn
  default-language: Haskell2010
